<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/app_bar"
        android:id="@+id/app_bar">
    </include>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name : "
        android:textSize="18sp"
        android:textColor="@color/colorBlack"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/name_hint"
        android:id="@+id/name"
        android:padding="@dimen/edit_text_padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email "
        android:textSize="18sp"
        android:textColor="@color/colorBlack"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:padding="@dimen/edit_text_padding"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password "
        android:textSize="18sp"
        android:textColor="@color/colorBlack"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:padding="@dimen/edit_text_padding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm Password "
        android:textSize="18sp"
        android:textColor="@color/colorBlack"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:id="@+id/cpw"
        android:padding="@dimen/edit_text_padding"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:onClick="onSignUpPressed"
        android:background="@drawable/custom_round_btn"/>

</LinearLayout>