<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar"
                android:visibility="invisible"></include>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="700px"
                android:layout_height="700px"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"

                android:background="@drawable/logo2"/>
            <LinearLayout
                android:id="@+id/linearLayoutLogin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/username_hint"
                    android:id="@+id/email"
                    android:padding="@dimen/edit_text_padding"
                    android:inputType="textEmailAddress"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/password_hint"
                    android:id="@+id/password"
                    android:padding="@dimen/edit_text_padding"
                    android:inputType="textPassword"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:onClick="onLoginPressed"
                    android:id="@+id/btnLogin"
                    android:background="@drawable/custom_round_btn"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:onClick="onRegisterPressed"
                    android:background="@drawable/custom_round_btn"
                    android:layout_marginTop="10dp"
                    />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:layout_gravity="center"
                    android:onClick="onRememberMePressed"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetPassword"
                    android:onClick="onForgetPasswordPressed"
                    />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/loadingRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"
            android:visibility="invisible"
            >
            <pl.droidsonroids.gif.GifImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/load"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>