<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".eventView.EventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar">

                <TextView android:text="Hello" />
            </include>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/eventTitle"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextEventName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorLightGrey"
                    android:hint="@string/eventTitle_hint"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Date"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorLightGrey"
                    android:hint="Enter the date"
                    android:inputType="date"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/colorBlack"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/textViewStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/start_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorLightGrey"
                    android:hint="@string/start_time_hint"
                    android:inputType="time"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/end_time"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorLightGrey"
                    android:hint="@string/End_time_hint"
                    android:inputType="time"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toRightOf="@id/textViewEvent"
                    app:layout_constraintTop_toBottomOf="@id/editTextStartTime" />

                <TextView
                    android:id="@+id/textViewLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/location"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorLightGrey"
                    android:hint="@string/location_hint"
                    android:padding="@dimen/edit_text_padding"

                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toRightOf="@id/textViewEvent"
                    app:layout_constraintTop_toBottomOf="@id/editTextEndTime" />


                <Button
                    android:id="@+id/buttonCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_round_btn"
                    android:text="@string/button_create_event" />

                <Button
                    android:id="@+id/buttonSkip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_round_btn"
                    android:text="Skip"
                    app:layout_constraintTop_toBottomOf="@id/buttonCreate" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>